src/objects/System_Design_Quote__c.object
<CustomObject>
    <fields>
        <fullName>NRG_Installation_State__c</fullName>
        <formula>TEXT(System_Design__r.Property__r.Property_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRG Installation State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_LeadId__c</fullName>
        <label>NRG LeadId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Lead_ID__c</fullName>
        <label>NRG Lead ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NRG_Leasing_Option__c</fullName>
        <label>NRG Leasing Option</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Minimum_Down_Payment__c</fullName>
        <label>NRG Minimum Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Monthly_Lease_Rate__c</fullName>
        <label>NRG Monthly Lease Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Monthly_Payment_Inc_Tax__c</fullName>
        <label>NRG Monthly Payment Inc. Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Overall_Site_Quality__c</fullName>
        <label>NRG Overall Site Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_Down_Payment__c</fullName>
        <label>NRG Prepaid Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_EPC_Price__c</fullName>
        <label>NRG Prepaid EPC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_Input_Error_Message__c</fullName>
        <label>NRG Prepaid Input Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_LeadId__c</fullName>
        <label>NRG_Prepaid_LeadId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_Minimum_Down_Payment__c</fullName>
        <label>NRG Prepaid Minimum Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_QuoteId__c</fullName>
        <label>NRG Prepaid QuoteId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Prepaid_SolarId__c</fullName>
        <label>NRG_Prepaid_SolarId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Prepay_Amount_Inc_Tax__c</fullName>
        <label>NRG Prepay Amount Inc. Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Prepay_Amount__c</fullName>
        <label>NRG Prepay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Projected_Annual_Output__c</fullName>
        <label>NRG Projected Annual Output</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Projected_Annual_Output_kWh_y__c</fullName>
        <formula>System_Design__r.NRG_Projected_Annual_Output_kWh_y__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRG Projected Annual Output (kWh/y)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_QuoteId__c</fullName>
        <label>NRG QuoteId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Quote_Accept_Message__c</fullName>
        <label>NRG Quote Accept Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Quote_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRG Quote Accepted ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRG_Run_Primary_Credit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRG Run Primary Credit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NRG_SolarId__c</fullName>
        <label>NRG SolarId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natural_Disaster_Adder_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Natural Disaster Adder Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Disqualifying_Validation_Errors__c</fullName>
        <label>Non-Disqualifying Validation Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Option_1_Average_Price_per_kWh_over_Term__c</fullName>
        <description>Estimated price per kWh under Option 1 over term of agreeement</description>
        <inlineHelpText>Estimated price per kWh under Option 1 over term of agreeement</inlineHelpText>
        <label>Option 1 Average Price per kWh over Term</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Contract_Signatory_1__c</fullName>
        <description>Name of First Contract Signatory for Quote Option 1</description>
        <inlineHelpText>Name of First Contract Signatory for Quote Option 1</inlineHelpText>
        <label>Option 1 Contract Signatory 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Contract_Signatory_2__c</fullName>
        <description>Name of Second Contract Signatory for Quote Option 1</description>
        <inlineHelpText>Name of Second Contract Signatory for Quote Option 1</inlineHelpText>
        <label>Option 1 Contract Signatory 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Down_Payment_Amount_Pre_Tax__c</fullName>
        <description>Down payment amount under Option 1, before any applicable taxes</description>
        <inlineHelpText>Down payment amount under Option 1, before any applicable taxes</inlineHelpText>
        <label>Option 1 Down Payment Amount Pre-Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Estimated_Price_per_kWh_Year_1__c</fullName>
        <description>Estimated price per kWh in year 1 of Option 1, based on estimated production and payments</description>
        <inlineHelpText>Estimated price per kWh in year 1 of Option 1, based on estimated production and payments</inlineHelpText>
        <label>Option 1 Estimated Price per kWh Year 1</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_First_Monthly_Payment_After_Tax__c</fullName>
        <description>Amount of first month&apos;s payment under Option 1, after all applicable taxes</description>
        <inlineHelpText>Amount of first month&apos;s payment under Option 1, after all applicable taxes</inlineHelpText>
        <label>Option 1 First Monthly Payment After Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Installation_Address_Line_1__c</fullName>
        <description>Installation address of system</description>
        <inlineHelpText>Installation address of system</inlineHelpText>
        <label>Option 1 Installation Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Installation_Address_Line_2__c</fullName>
        <description>Installation address of system</description>
        <inlineHelpText>Installation address of system</inlineHelpText>
        <label>Option 1 Installation Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Installation_Payment__c</fullName>
        <description>Payment made at Installation for Option 1</description>
        <inlineHelpText>Payment made at Installation for Option 1</inlineHelpText>
        <label>Option 1 Installation Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Inverter_Count__c</fullName>
        <label>Option 1 Inverter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_1_Inverter_Manufacturer__c</fullName>
        <description>Name of inverter manufacturer for inverters quoted in Option 1</description>
        <inlineHelpText>Name of inverter manufacturer for inverters quoted in Option 1</inlineHelpText>
        <label>Option 1 Inverter Manufacturer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Lease_Escalator__c</fullName>
        <description>Option 1 Lease Escalator</description>
        <inlineHelpText>Option 1 Lease Escalator</inlineHelpText>
        <label>Option 1 Lease Escalator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Option_1_Module_Manufacturer__c</fullName>
        <description>Name of module manufacturer for panels quoted in Option 1</description>
        <inlineHelpText>Name of module manufacturer for panels quoted in Option 1</inlineHelpText>
        <label>Option 1 Module Manufacturer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Monthly_Payment_Total_After_Tax__c</fullName>
        <description>Total of all monthly payments, excluding upfront payment, after taxes</description>
        <inlineHelpText>Total of all monthly payments, excluding upfront payment, after taxes</inlineHelpText>
        <label>Option 1 Monthly Payment Total After Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Monthly_Payment_Year_10__c</fullName>
        <description>Estimated monthly payment in year 10 of Option 1</description>
        <inlineHelpText>Estimated monthly payment in year 10 of Option 1</inlineHelpText>
        <label>Option 1 Monthly Payment Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Monthly_Payment_Year_11__c</fullName>
        <description>Estimated monthly payment in year 11 of Option 1</description>
        <inlineHelpText>Estimated monthly payment in year 11 of Option 1</inlineHelpText>
        <label>Option 1 Monthly Payment Year 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Monthly_Payment_Year_12__c</fullName>
        <description>Estimated monthly payment in year 12 of Option 1</description>
        <inlineHelpText>Estimated monthly payment in year 12 of Option 1</inlineHelpText>
        <label>Option 1 Monthly Payment Year 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Other_Charges__c</fullName>
        <description>All other charges associated with Option 1</description>
        <inlineHelpText>All other charges associated with Option 1</inlineHelpText>
        <label>Option 1 Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Panel_Count__c</fullName>
        <label>Option 1 Panel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_1_Prepaid_down_payment__c</fullName>
        <label>Option 1 Prepaid down payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Prod_Estimate_Initial_Term__c</fullName>
        <description>Estimated production for term of Option 1</description>
        <inlineHelpText>Estimated production for term of Option 1</inlineHelpText>
        <label>Option 1 Prod Estimate Initial Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_1_Prod_Estimate_Year_1__c</fullName>
        <description>Estimated  production in Year 1 of Option 1 Term</description>
        <inlineHelpText>Estimated  production in Year 1 of Option 1 Term</inlineHelpText>
        <label>Option 1 Prod Estimate Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_1_Production_Guarantee_Year_10__c</fullName>
        <description>Cumulative guaranteed production under Option 1 through year 10</description>
        <inlineHelpText>Cumulative guaranteed production under Option 1 through year 10</inlineHelpText>
        <label>Option 1 Production Guarantee Year 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_1_Production_Guarantee_Year_11__c</fullName>
        <description>Cumulative guaranteed production under Option 1 through year 11</description>
        <inlineHelpText>Cumulative guaranteed production under Option 1 through year 11</inlineHelpText>
        <label>Option 1 Production Guarantee Year 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_1_Production_Guarantee_Year_12__c</fullName>
        <description>Cumulative guaranteed production under Option 1 through year 12</description>
        <inlineHelpText>Cumulative guaranteed production under Option 1 through year 12</inlineHelpText>
        <label>Option 1 Production Guarantee Year 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_1_Signatory_1_Email__c</fullName>
        <description>Email address of primary signatory on contract</description>
        <inlineHelpText>Email address of primary signatory on contract</inlineHelpText>
        <label>Option 1 Signatory 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Option_1_Signatory_1_Phone__c</fullName>
        <description>Primary phone number of primary signatory on contract</description>
        <inlineHelpText>Primary phone number of primary signatory on contract</inlineHelpText>
        <label>Option 1 Signatory 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Option_1_Signatory_Address_Line_1__c</fullName>
        <description>Address of Primary Residence of Contract Signatory</description>
        <inlineHelpText>Address of Primary Residence of Contract Signatory</inlineHelpText>
        <label>Option 1 Signatory Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Signatory_Address_Line_2__c</fullName>
        <description>Address of Primary Residence of Contract Signatory</description>
        <inlineHelpText>Address of Primary Residence of Contract Signatory</inlineHelpText>
        <label>Option 1 Signatory Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_1_Tier_1_EPC__c</fullName>
        <description>Option 1 Tier 1 EPC</description>
        <inlineHelpText>Option 1 Tier 1 EPC</inlineHelpText>
        <label>Option 1 Tier 1 EPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Tier_2_EPC__c</fullName>
        <description>Option 1 Tier 2 EPC</description>
        <inlineHelpText>Option 1 Tier 2 EPC</inlineHelpText>
        <label>Option 1 Tier 2 EPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Tier_3_EPC__c</fullName>
        <description>Option 1 Tier 3 EPC</description>
        <inlineHelpText>Option 1 Tier 3 EPC</inlineHelpText>
        <label>Option 1 Tier 3 EPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Total_Tax_Paid__c</fullName>
        <description>Total of all estimated taxes to be paid under Option 1</description>
        <inlineHelpText>Total of all estimated taxes to be paid under Option 1</inlineHelpText>
        <label>Option 1 Total Tax Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_1_Total_of_Payments__c</fullName>
        <description>Total amount of all payments to be made during term of Option 1</description>
        <inlineHelpText>Total amount of all payments to be made during term of Option 1</inlineHelpText>
        <label>Option 1 Total of Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Panel_Count__c</fullName>
        <label>Panel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previously_Received_County_Tax_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously Received County Tax Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Received_County_Tax_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is a question that is needed to be asked of the user.</description>
        <inlineHelpText>When checked, this is a question that is needed to be asked of the user.</inlineHelpText>
        <label>Previously Received County Tax Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Received_State_Rebate_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is a question that is needed to be asked of the user.</description>
        <inlineHelpText>When checked, this is a question that is needed to be asked of the user.</inlineHelpText>
        <label>Previously Received State Rebate Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Received_State_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously Received State Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Received_State_Tax_Credit_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is a question that is needed to be asked of the user.</description>
        <inlineHelpText>When checked, this is a question that is needed to be asked of the user.</inlineHelpText>
        <label>Previously Received State Tax Credit Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Received_State_Tax_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously Received State Tax Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Received_Utility_Rebate_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is a question that is needed to be asked of the user.</description>
        <inlineHelpText>When checked, this is a question that is needed to be asked of the user.</inlineHelpText>
        <label>Previously Received Utility Rebate Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Received_Utility_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously Received Utility Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Date__c</fullName>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Error_Log__c</fullName>
        <label>Pricing Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Expiration_Date__c</fullName>
        <label>Pricing Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Region</label>
        <referenceTo>Pricing_Region__c</referenceTo>
        <relationshipLabel>System Design Quotes</relationshipLabel>
        <relationshipName>System_Design_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Residence_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is a question that is needed to be asked of the user.</description>
        <inlineHelpText>When checked, this is a question that is needed to be asked of the user.</inlineHelpText>
        <label>Primary Residence Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>System_Design__r.Property__r.Property_City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>text(System_Design__r.Property__r.Property_County__c)</formula>
        <label>Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Record_Type__c</fullName>
        <label>Property Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>text(System_Design__r.Property__r.Property_State__c)</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>System_Design__r.Property__r.Property_ZIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_in_Historic_Trust_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is a question that is needed to be asked of the user.</description>
        <inlineHelpText>When checked, this is a question that is needed to be asked of the user.</inlineHelpText>
        <label>Property in Historic Trust Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_in_Historic_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property in Historic Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_in_Revocable_Trust_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this is a question that is needed to be asked of the user.</description>
        <inlineHelpText>When checked, this is a question that is needed to be asked of the user.</inlineHelpText>
        <label>Property in Revocable Trust Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_in_Revocable_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property in Revocable Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QAS_Property_County__c</fullName>
        <description>Initially used in code to cut back on extra SOQL queries in triggers.</description>
        <formula>System_Design__r.Property__r.QAS_Property_County__c</formula>
        <label>QAS Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quoted_SREC_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quoted SREC Market</label>
        <referenceTo>SREC_Market__c</referenceTo>
        <relationshipLabel>System Design Quotes</relationshipLabel>
        <relationshipName>System_Design_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Prepaid__c</fullName>
        <label>Sales Tax Prepaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Adder_Commission_Value__c</fullName>
        <inlineHelpText>Adder Commission Value ($) is a projection of entitlement impacts to consultant&apos;s commission rate; subject to change upon Proposal, Contract and Sales Order creation.</inlineHelpText>
        <label>Scenario 1 Adder Commission Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Adjusted_Price_NUM__c</fullName>
        <label>Scenario 1 Adjusted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Adjusted_Price_per_Watt_W__c</fullName>
        <formula>Scenario_1_Adjusted_Price_NUM__c / (1000 * System_Design__r.Total_System_Size_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Adjusted Price per Watt ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Apply_Standard_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scenario 1 Apply Standard Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Available_Portfolio_Tiers__c</fullName>
        <label>Scenario 1 Available Portfolio Tiers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Available_SREC_Contract_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 1 Available SREC Contract Offer</label>
        <referenceTo>Available_SREC_Contract_Offer__c</referenceTo>
        <relationshipLabel>System Design Quotes</relationshipLabel>
        <relationshipName>System_Design_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Avg_Solar_Elec_Cost_kWh__c</fullName>
        <label>Scenario 1 Avg Solar Elec Cost ($/kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Avoided_Utility_Rate__c</fullName>
        <formula>CASE( Scenario_1_Lease_Fund__r.Avoided_Utility_Rate_Override__c
  , &apos;NRG&apos;
  , System_Design__r.NRG_Avoided_Utility_Rate__c

  , &apos;Sunnova&apos;
  , System_Design__r.Sunnova_Avoided_Utility_Rate__c

  , System_Design__r.Avoided_Utility_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Avoided Utility Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Base_Commission_Dollars__c</fullName>
        <formula>Scenario_1_Adjusted_Price_NUM__c * Scenario_1_Base_Commission_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Base Commission ($) is a projection of consultant&apos;s commission amount; not final and subject to change upon Proposal, Contract and Sales Order creation.</inlineHelpText>
        <label>Scenario 1 Base Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Base_Commission_Percent__c</fullName>
        <formula>IF(Community_Program_Offer__c == null,
((((100 * $Setup.ContractSettings__c.Minimum_Commission_Rate__c - 100 * $Setup.ContractSettings__c.Maximum_Commission_Rate__c) / ($Setup.ContractSettings__c.Maximum_Promotion__c - $Setup.ContractSettings__c.Minimum_Promotion__c)) * Scenario_1_Commission_Impact_Promotions__c) + (100 * $Setup.ContractSettings__c.Maximum_Commission_Rate__c)) / 100, $Setup.ContractSettings__c.Solarize_Commission_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Base Commission (%) is a projection of consultant&apos;s commission rate; not final and subject to change upon Proposal, Contract and Sales Order creation.</inlineHelpText>
        <label>Scenario 1 Base Commission (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Comm_Prog_Discount_frm_Tier1__c</fullName>
        <label>Scenario 1 Comm Prog Discount frm Tier1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Comm_Prog_Tier_1_Design_Price__c</fullName>
        <label>Scenario 1 Comm Prog Tier 1 Design Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Commission_Impact_Promotions__c</fullName>
        <description>Field is measured in $/Watt</description>
        <inlineHelpText>Field is measured in $/Watt</inlineHelpText>
        <label>Scenario 1 Commission Impact Promotions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_County_Tax_Credit_Amount__c</fullName>
        <label>Scenario 1 County Tax Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Credit_Tier__c</fullName>
        <label>Scenario 1 Credit Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Depreciation_Basis__c</fullName>
        <label>Scenario 1 Depreciation Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Design_Override_Price__c</fullName>
        <formula>Scenario_1_Design_Price__c + Scenario_1_VP_Sales_Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario 1 Design Override Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Design_Price__c</fullName>
        <label>Scenario 1 Design Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Detail_Log__c</fullName>
        <inlineHelpText>This is a trace log for this scenario.</inlineHelpText>
        <label>Scenario 1 Detail Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Down_Payment_Adjustment__c</fullName>
        <label>Scenario 1 Down Payment Adjustment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Down_Payment__c</fullName>
        <label>Scenario 1 Down Payment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Eligible_Promo_Cash_Rebate__c</fullName>
        <label>Scenario 1 Eligible Promo Cash Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Error_Log__c</fullName>
        <label>Scenario 1 Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scenario_1_Escalator_Adjustment__c</fullName>
        <label>Scenario 1 Escalator Adjustment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>